--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=GeG_xYjSsgU" target="_blank">
-                    <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="5 Uniquely Japanese Habits for Calm & Mindful Living">
+                    <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="5 Japanese Habits for Your Calm & Positive Living">
                     <div class="video-info">
-                        <h3>5 Uniquely Japanese Habits for Calm & Mindful Living</h3>
+                        <h3>5 Japanese Habits for Your Calm & Positive Living</h3>
                         <div class="channel">Samurai Matcha</div>
                         <div class="date">3 hours ago</div>
                     </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>The Power of Semen Retention | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>A Mindful Start to Your Day, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -233,7 +233,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 16.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 16.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>The Power of Semen Retention | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>A Mindful Start to Your Day, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8230,9 +8230,9 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=GeG_xYjSsgU" target="_blank">
-                        <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="5 Uniquely Japanese Habits for Calm & Mindful Living">
+                        <img src="https://i.ytimg.com/vi/GeG_xYjSsgU/mqdefault.jpg" alt="5 Japanese Habits for Your Calm & Positive Living">
                         <div class="video-info">
-                            <h3>5 Uniquely Japanese Habits for Calm & Mindful Living</h3>
+                            <h3>5 Japanese Habits for Your Calm & Positive Living</h3>
                             <div class="channel">Samurai Matcha</div>
                             <div class="date">3 hours ago</div>
                         </div>
